--- a/securitydemo1/src/main/resources/application.properties
+++ b/securitydemo1/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+#端口
 server.port=8111
+
+#数据库连接参数
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/springsecurity?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=CTT
+spring.datasource.username=root
+spring.datasource.password=123456
